// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommonJsTransformer Exports Should convert ObjectLiteralExpression 1`] = `
"let GENERATED_VAR_BY_TRANSFORMER_1;
let GENERATED_VAR_BY_TRANSFORMER_2;
GENERATED_VAR_BY_TRANSFORMER_1 = b;
GENERATED_VAR_BY_TRANSFORMER_2 = d;
export { GENERATED_VAR_BY_TRANSFORMER_1 as a, GENERATED_VAR_BY_TRANSFORMER_2 as c };
export default { a: GENERATED_VAR_BY_TRANSFORMER_1, c: GENERATED_VAR_BY_TRANSFORMER_2 };"
`;

exports[`CommonJsTransformer Exports Should convert define.property for identifier 1`] = `
"let GENERATED_VAR_BY_TRANSFORMER_1;
GENERATED_VAR_BY_TRANSFORMER_1 = b;
export { GENERATED_VAR_BY_TRANSFORMER_1 as a };
export default { a: GENERATED_VAR_BY_TRANSFORMER_1 };"
`;

exports[`CommonJsTransformer Exports Should convert define.property with getter 1`] = `
"let GENERATED_VAR_BY_TRANSFORMER_1;
GENERATED_VAR_BY_TRANSFORMER_1 = parts_js_1.PropertyPart;
export { GENERATED_VAR_BY_TRANSFORMER_1 as hello };
export default { hello: GENERATED_VAR_BY_TRANSFORMER_1 };"
`;

exports[`CommonJsTransformer Exports Should convert define.property with value 1`] = `
"let GENERATED_VAR_BY_TRANSFORMER_1;
GENERATED_VAR_BY_TRANSFORMER_1 = true;
export { GENERATED_VAR_BY_TRANSFORMER_1 as __esModule };
export default { __esModule: GENERATED_VAR_BY_TRANSFORMER_1 };"
`;

exports[`CommonJsTransformer Exports Should convert exports.default 1`] = `
"let GENERATED_VAR_BY_TRANSFORMER_1;
GENERATED_VAR_BY_TRANSFORMER_1 = Hello;
export default GENERATED_VAR_BY_TRANSFORMER_1;"
`;

exports[`CommonJsTransformer Exports Should convert exports.name 1`] = `
"let GENERATED_VAR_BY_TRANSFORMER_1;
GENERATED_VAR_BY_TRANSFORMER_1 = Hello;
export { GENERATED_VAR_BY_TRANSFORMER_1 as hello };
export default { hello: GENERATED_VAR_BY_TRANSFORMER_1 };"
`;

exports[`CommonJsTransformer Exports Should convert exports.name with same name as the parameter 1`] = `
"let GENERATED_VAR_BY_TRANSFORMER_1;
const hello = null;
GENERATED_VAR_BY_TRANSFORMER_1 = hello;
export { GENERATED_VAR_BY_TRANSFORMER_1 as hello };
export default { hello: GENERATED_VAR_BY_TRANSFORMER_1 };"
`;

exports[`CommonJsTransformer Exports Should convert named export 1`] = `
"let GENERATED_VAR_BY_TRANSFORMER_1;
GENERATED_VAR_BY_TRANSFORMER_1 = Hello;
export { GENERATED_VAR_BY_TRANSFORMER_1 as hello };
export default { hello: GENERATED_VAR_BY_TRANSFORMER_1 };"
`;

exports[`CommonJsTransformer Exports Should convert to default export to ES6 1`] = `
"let GENERATED_VAR_BY_TRANSFORMER_1;
GENERATED_VAR_BY_TRANSFORMER_1 = Hello;
export default GENERATED_VAR_BY_TRANSFORMER_1;"
`;

exports[`CommonJsTransformer Exports Should move exports to top scope 1`] = `
"let GENERATED_VAR_BY_TRANSFORMER_1;
if (typeof define === 'function' && define.amd) {
    define(function () {
        return LZString;
    });
}
else if (typeof module !== 'undefined' && module != null) {
    GENERATED_VAR_BY_TRANSFORMER_1 = LZString;
}
export default GENERATED_VAR_BY_TRANSFORMER_1;"
`;

exports[`CommonJsTransformer Forwards Should convert redirects 1`] = `
"let GENERATED_VAR_BY_TRANSFORMER_1;
GENERATED_VAR_BY_TRANSFORMER_1 = require(\\"./hello.js\\");
export default GENERATED_VAR_BY_TRANSFORMER_1;"
`;

exports[`CommonJsTransformer Forwards Should convert redirects 2`] = `
"let GENERATED_VAR_BY_TRANSFORMER_1;
import WrenchIcon from './icons/WrenchIcon.js';
GENERATED_VAR_BY_TRANSFORMER_1 = WrenchIcon;
export { GENERATED_VAR_BY_TRANSFORMER_1 as WrenchIcon };
export default { WrenchIcon: GENERATED_VAR_BY_TRANSFORMER_1 };"
`;

exports[`CommonJsTransformer Forwards Should convert redirects 3`] = `
"let GENERATED_VAR_BY_TRANSFORMER_1;
import WrenchIcon from './icons/WrenchIcon.js';
GENERATED_VAR_BY_TRANSFORMER_1 = WrenchIcon;
export { GENERATED_VAR_BY_TRANSFORMER_1 as WrenchIcon };
export default { WrenchIcon: GENERATED_VAR_BY_TRANSFORMER_1 };"
`;

exports[`CommonJsTransformer Import Should convert default import to ES6 1`] = `"import Hello from \\"./hello.ts\\";"`;

exports[`CommonJsTransformer Import Should convert named import 1`] = `"import { Hello } from \\"./hello.ts\\";"`;

exports[`CommonJsTransformer Import Should convert require in sub-scope 1`] = `
"import GENERATED_VAR_BY_TRANSFORMER_1 from \\"hello.js\\";
{
    const hello = GENERATED_VAR_BY_TRANSFORMER_1;
}"
`;

exports[`CommonJsTransformer Import Should convert simple import 1`] = `"import \\"./hello.ts\\";"`;

exports[`CommonJsTransformer Should read from internal export Should convert to multiple commands 1`] = `
"let GENERATED_VAR_BY_TRANSFORMER_1;
let GENERATED_VAR_BY_TRANSFORMER_2;
let GENERATED_VAR_BY_TRANSFORMER_3;
GENERATED_VAR_BY_TRANSFORMER_1 = GENERATED_VAR_BY_TRANSFORMER_2 = GENERATED_VAR_BY_TRANSFORMER_3 = void 0;
export { GENERATED_VAR_BY_TRANSFORMER_1 as lastAttributeNameRegex, GENERATED_VAR_BY_TRANSFORMER_2 as createMarker, GENERATED_VAR_BY_TRANSFORMER_3 as isTemplatePartActive };
export default { lastAttributeNameRegex: GENERATED_VAR_BY_TRANSFORMER_1, createMarker: GENERATED_VAR_BY_TRANSFORMER_2, isTemplatePartActive: GENERATED_VAR_BY_TRANSFORMER_3 };"
`;

exports[`CommonJsTransformer Should read from internal export Should red from internal export "hello" 1`] = `
"let GENERATED_VAR_BY_TRANSFORMER_1;
GENERATED_VAR_BY_TRANSFORMER_1 = \\"Hello\\";
console.log(GENERATED_VAR_BY_TRANSFORMER_1);
export { GENERATED_VAR_BY_TRANSFORMER_1 as hello };
export default { hello: GENERATED_VAR_BY_TRANSFORMER_1 };"
`;
